--- a/css/styles.css
+++ b/css/styles.css
@@ -268,3 +268,15 @@ html, body {
   text-decoration: underline;
 }
 
+
+.parallax {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  background-attachment: scroll;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+}
+
