--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@ html, body {
   width: 100%;
   height: 200px;
   background-attachment: scroll;
-  background-position: center bottom;
+  background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 1;
